# AI-Music-Composer

./: main.py  pyproject.toml  setup.py  wiki.md
app/: main.py  utils.py
