[project]
name = "ai-music-composer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.1.2",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.1",
    "langchain-groq>=1.1.0",
    "music21>=9.9.1",
    "python-dotenv>=1.2.1",
    "scipy>=1.16.3",
    "streamlit>=1.52.0",
    "synthesizer>=0.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]
